fixed readme typo

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ankipack
 
-anki deck generation combing frequency lists with tatoeba. see http://tatoeba.org.
+anki deck generation combining frequency lists with tatoeba. see http://tatoeba.org.
 
 download sentences.csv and links.csv from http://tatoeba.org/eng/download_tatoeba_example_sentences
 
